create repo for sass-practice

--- a/src/lib/service.scss
+++ b/src/lib/service.scss
@@ -1,6 +1,10 @@
 // створюємо міксин який буде задавати відступи в flex або grid контейнерах,відступ буде в 4 рази більший ніж змінна $gap
 @mixin spacing($gap) {
     gap: $gap * 4px;
+
+		// & .chat-item {
+		// 	display: none;
+		// }
 }
 
 // створюємо міксин який буде створювати округлий елемент з розмірами які передаються в змінній $size
@@ -9,4 +13,12 @@
     height: #{$size}px;
     width: $size * 1px;
     border-radius: 50%;
+
+		// &:hover {
+		// 	opacity: 0.5;
+		// }
+
+		// p {
+		// 	opacity: 0.5;
+		// }
 }
