css.sass.lessons25&26

--- a/src/container/func/index.hbs
+++ b/src/container/func/index.hbs
@@ -4,12 +4,9 @@
  }}
 
 <div class='wrapper'>
-  <div class='container container1'>
-
-  </div>
-  <div class='container container2'>
-
-  </div>
+  {{! // variant7-8: }}
+  <div>Test</div>
+  <div class='button'>Test</div>
 </div>
 
 {{! 
