--- a/src/container/func/style.scss
+++ b/src/container/func/style.scss
@@ -1,6 +1,232 @@
-// оскільки @import імпортує всі данні з файлу навіть ті які були імпортовані в нього в нас відразу є до них доступ
-@import "./style2.scss";
+// variant1:
+@function content($text) {
+	@return $text;
+}
 
-.container2 {
-  background-color: $second-color;
+.wrapper::after {
+ content: content("Test1");
+}
+
+// variant2:
+@function content() {
+	@return "123";
+}
+
+.wrapper::after {
+ content: content();
+}
+
+// variant3:
+@function content() {
+	@return "123";
+}
+
+@function fontSize() {
+	@return 100;
+}
+
+.wrapper::after {
+ content: content();
+ font-size: #{fontSize()}px;
+}
+
+// variant4:
+@function content() {
+	$text: "Hello";
+	@return $text;
+}
+
+@function fontSize() {
+	@return 20;
+}
+
+.wrapper::after {
+ content: content();
+ font-size: #{fontSize()}px;
+}
+
+// variant5:
+@function content() {
+	$text: "Hello";
+	@return $text;
+}
+
+@function fontSize() {
+	@return 20;
+}
+
+.wrapper::after {
+ content: content();
+ font-size: #{fontSize()}px;
+}
+
+// variant6:
+@function content($value) {
+	$text: "Hello" + " " + $value;
+	@return $text;
+}
+
+@function fontSize() {
+	@return 20;
+}
+
+.wrapper::after {
+ content: content("World");
+ font-size: #{fontSize()}px;
+}
+
+// variant7:
+@function content($value) {
+	$text: "Hello" + " " + $value;
+	@return $text;
+}
+
+@function fontSize() {
+	@return 20;
+}
+
+@function spacing($num) {
+	@return #{$num * 4}px;
+}
+
+@function calcCenter($size) {
+	@return calc(50% - ($size / 2	));
+}
+
+
+
+.wrapper::after {
+ content: content("World");
+ font-size: #{fontSize()}px;
+ position: absolute;
+ height: 10px;
+ top: calcCenter(10px);
+}
+
+.wrapper {
+	display: grid;
+	gap: spacing(1);
+}
+
+// variant8:
+@function content($value, $num) {
+	// $text: "Hello" + " " + $value;
+
+	$text: 5 % 3 + "";
+
+	$text: 2 > 2;  
+	$text: 2 == 2;
+	$text: $value == "Hello";
+	// Замість:
+	// $text: $value != "Hello" and $num == 10;  
+	// @return $text;
+	// Заміняємо:
+	// @return $value != "Hello" and $num == 10;
+	
+	// По умові:
+	@if $num == 10 {
+		@return 10px; 
+	}
+}
+
+@function fontSize() {
+	@return 20;
+}
+
+@function spacing($num) {
+	@return #{$num * 4}px;
+}
+
+@function calcCenter($size) {
+	@return calc(50% - ($size / 2	));
+}
+
+// ===========================
+@function getIcon($name) {
+	@if($name == "burger") {
+		@return "icon/header/burger.svg";
+	}
+
+	@if($name == "user") {
+		@return "icon/dashboard/user.svg";
+	}
+}
+
+// Інший варіант:
+@function getIcon($name) {
+	$icon: "";
+
+	@if($name == "burger") {
+		$icon: "icon/header/burger.svg";
+	}
+
+	@if($name == "user") {
+		$icon: "icon/dashboard/user.svg";
+	}
+
+	@return url(#{$icon});
+}
+
+@mixin button($type: null, $size: null) {
+	// background: red;
+	display: inline-block;
+	width: fit-content;
+	// padding: spacing(3) spacing(4);
+	border-radius: 12px;
+	text-align: center;
+
+	@if $type == "primary" {
+		background-color: aqua;
+	
+	}	@if $type == "secondary" {
+		background-color: yellow;
+	
+	} @else {
+		background-color: red;
+	}
+
+
+	@if $size == "big" {
+		padding: spacing(4) spacing(6);
+	
+	}	@else if $size == "small" {
+		padding: spacing(1) spacing(2);
+	
+	} @else {
+		padding: spacing(2) spacing(4);
+	}
+
+	@if $type == $size {
+		@error "Type не може буи як Size"
+	}
+}
+
+.wrapper::after {
+//  content: content("World");
+content: "World";
+
+// background-image: content("Hello1", 10);
+background-image: getIcon("user");
+
+ font-size: #{fontSize()}px;
+ position: absolute;
+ height: 40px;
+ min-width: 40px;
+ top: calcCenter(10px);
+ background: #ddd;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: spacing(4);
+}
+
+.wrapper {
+	display: grid;
+	gap: spacing(4);
+	padding: spacing(4);
+}
+
+.button {
+	// @include button("primary", "big");
+	@include button("secondary", "small");
 }
